# AgenticAI-PythonPackageStatus

./: PACKAGE_DOCUMENTATION.md  README.md  pyproject.toml
src/PackageUpdateSearch/: APP_DOCUMENTATION.md  RT.py  agenticRT.py  app.py  example.py  testing.py
src/PackageUpdateSearch.egg-info/: PKG-INFO
src/PackageUpdater/: testing.py
src/example_package_ChazCisneros20/: example.py  testing.py
src/example_package_ChazCisneros20.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_agenticrt_loop_behavior.py
